get rid of manytoone